# Spider-Fish

./: CMakeLists.txt  README.markdown
assets/: CMakeLists.txt  vertex.sfx
include/: Bullet.h  Game.h  GameObject.h  Ship.h  SpriteManager.h
projects/mac-lion-clang/Spider Fish/Spider Fish/: Spider Fish-Info.plist  Spider Fish-Prefix.pch
projects/mac-lion-clang/Spider Fish/Spider Fish.xcodeproj/: project.pbxproj
projects/mac-lion-clang/Spider Fish/Spider Fish.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/mac-lion-clang/Spider Fish/Spider Fish.xcodeproj/project.xcworkspace/xcuserdata/drakej.xcuserdatad/: UserInterfaceState.xcuserstate
projects/mac-lion-clang/Spider Fish/Spider Fish.xcodeproj/xcuserdata/drakej.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
projects/mac-lion-clang/Spider Fish/Spider Fish.xcodeproj/xcuserdata/drakej.xcuserdatad/xcschemes/: Spider Fish.xcscheme  xcschememanagement.plist
src/: EnemyShip.cpp  Game.cpp  OrbBullet.cpp  PlayerShip.cpp  Shader.cpp  Shader.h  ShipHalo.cpp  SpiderFishGame.cpp  Sprite.cpp  SpriteManager.cpp  main.cpp
src/mac/: resources.mm
